Release 0.6.0.7
---------------
Added new breakpoint window that will break upon detection of Program Counter and memory addresses read and writes.
Clean up of old dead code.

** TODO: Update the Keyboard device for F256Jr.
** TODO: Users can now modify the CPU registers when in debug mode. The registers have a white background when editable.
** TODO: Implemented the various cursor modes and rates.
** TODO: Add breaklines in debugger listing, when memory is not contiguous.

Release 0.6.0.6
---------------
Fixed sprite layer ordering for the F256Jr.
Fixed incorrect text mode in F256Jr.
The GPU now imitates the F256Jr FPGA bug - the tile attributes are offset by 16-bit.

Release 0.6.0.5
---------------
Interrupt handler for the Real-time clock (RTC)
Added .hex loading in asset loader.
Added a default font for F256Jr.
Fix the painting of layers in F256Jr.

Release 0.6.0.4
---------------
Fix the Uploader to disable the "Flash" checkbox when a non-bin file is selected.
Fixed the Foenix F256Jr kernel loading for @Gadget.

Release 0.6.0.3
---------------
Fixed tile editor when small tiles are used without stride.
Fixed blank asset list when adding assets from the Tools | Load Assets menu.
Fixed the problem with sprites leaking into the border when in F256Jr mode.
Fixed the Tile Editor for the F256Jr.

Release 0.6.0.2
---------------
Fixed CPU reading incorrect page when MMU is present in F256Jr.
Fixed LUT editing issue.
Fixed Tileset stride issue.
Removed MultimediaTimer and replaced with a native C# HiResTimer.
Added sprite functionality for the F256Jr.
In the Uploader window, when in F256Jr mode, the buffer size is 2K.

Release 0.6.0.1
---------------
Implemented tiles for F256Jr.
Fixed the issue when resetting the CPU, also reset the MMU and VICKY Layer Manager Registers.
Fixed RTC issue in F256Jr where the time was written in RAM.

Release 0.6.0.0
---------------
Fixed an issue where CPS/FPS display was showing zeroes after switching Board type.